--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "styled-components": "^5.3.5",
     "typescript": "^4.6.3",
     "vite": "^2.9.9",
+    "vite-plugin-linaria": "^1.0.0",
     "vitest": "^0.12.6"
   },
   "peerDependencies": {
@@ -64,5 +65,11 @@
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.5"
   },
-  "packageManager": "yarn@3.2.1"
+  "packageManager": "yarn@3.2.1",
+  "dependencies": {
+    "@linaria/babel-preset": "^3.0.0-beta.15",
+    "@linaria/core": "^3.0.0-beta.15",
+    "@linaria/react": "^3.0.0-beta.15",
+    "@linaria/shaker": "^3.0.0-beta.15"
+  }
 }
