--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@types/react": "17.0.2",
     "@types/react-dom": "17.0.2",
     "@types/styled-components": "^5.1.25",
+    "@vanilla-extract/css": "^1.7.1",
+    "@vanilla-extract/vite-plugin": "^3.1.6",
     "@vitejs/plugin-react": "^1.3.0",
     "babel-loader": "^8.2.5",
     "jsdom": "^19.0.0",
